// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`servie-cors should forward options 1`] = `
Response {
  "$rawBody": "options",
  "headers": Headers {
    "object": Object {
      "access-control-allow-methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
      "access-control-allow-origin": "*",
      "content-length": "7",
      "content-type": "text/plain",
    },
  },
  "status": 200,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`servie-cors should handle options 1`] = `
Response {
  "$rawBody": null,
  "headers": Headers {
    "object": Object {
      "access-control-allow-methods": "GET,HEAD,PUT,PATCH,POST,DELETE",
      "access-control-allow-origin": "*",
    },
  },
  "status": 204,
  "statusText": "",
  "trailer": Promise {},
}
`;

exports[`servie-cors should set origin 1`] = `
Response {
  "$rawBody": "GET",
  "headers": Headers {
    "object": Object {
      "access-control-allow-origin": "*",
      "content-length": "3",
      "content-type": "text/plain",
    },
  },
  "status": 200,
  "statusText": "",
  "trailer": Promise {},
}
`;
